@@ -30,7 +30,6 @@ import java.util.stream.Stream;
 
 import static java.util.Comparator.comparing;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @ExcludeDuringBuild
@@ -90,7 +89,7 @@ public class ASTRASortingTest {
                 "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r",
                 "s", "t", "u", "v", "w", "x", "y", "z")
                 .map(characterRepository::getCharacter)
-                .collect(toList());
+                .toList();
     }
 
     private static Set<FrequencyAwareWordPair> generateTrainingWordPairs(List<? extends ICharacter> alphabet, int randomPartLength, Random random) {
